--- a/src/main/resources/public/package.json
+++ b/src/main/resources/public/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "eslint": "^5.9.0",
+    "eslint-plugin-vue": "^4.7.1",
     "vue": "^2.5.11",
     "vue-router": "^3.0.1",
     "vue-single-select": "^1.0.23"
