[Evo] Ref #5188 - Link to validation form
- Add link to the model validation from dashboard
- Add date manager
- Add alias for simplify import in components

--- a/src/main/resources/public/package.json
+++ b/src/main/resources/public/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "axios": "^0.18.0",
         "bootstrap": "^4.1.3",
+        "date-fns": "^1.29.0",
         "lodash": "^4.17.11",
         "vue": "^2.5.11",
         "vue-bootstrap-typeahead": "^0.2.6",
