--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,8 @@ dependencies {
     compile('com.google.guava:guava:23.6-jre')
     compile('org.codehaus.groovy:groovy')
     compile('org.codehaus.groovy:groovy-templates')
+    compile('org.apache.commons:commons-compress:1.18')
+    compile('com.google.guava:guava:24.1.1-jre')
 
     runtime('org.springframework.boot:spring-boot-devtools')
     runtime('org.codehaus.groovy:groovy:2.4.7')
