--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
         springBootVersion = '2.0.7.RELEASE'
-        kotlinVersion = '1.3.0' //update from 1.2.71 to fit IDE plugins versions
+        kotlinVersion = '1.2.71' //update from 1.2.71 to fit IDE plugins versions
     }
     repositories {
         mavenCentral()
@@ -66,11 +66,9 @@ dependencies {
     compile('com.fasterxml.jackson.module:jackson-module-kotlin')
     compile('org.apache.commons:commons-lang3:3.7')
     compile('commons-codec:commons-codec:1.11')
-    compile('com.google.guava:guava:23.6-jre')
+    compile('com.google.guava:guava:24.1.1-jre')
     compile('org.codehaus.groovy:groovy')
     compile('org.codehaus.groovy:groovy-templates')
-    compile('org.apache.commons:commons-compress:1.18')
-    compile('com.google.guava:guava:24.1.1-jre')
 
     runtime('org.springframework.boot:spring-boot-devtools')
     runtime('org.codehaus.groovy:groovy:2.4.7')
@@ -81,9 +79,12 @@ dependencies {
     testCompile('com.github.tomakehurst:wiremock-standalone:2.17.0')
     testCompile("io.projectreactor:reactor-test")
     testCompile('org.springframework.amqp:spring-rabbit-test')
-    testCompile('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
+    testCompile('de.flapdoodle.embed:de.flapdoodle.embed.mongo'){
+        exclude group: 'org.apache.commons', module: 'commons-compress'
+    }
 
     testImplementation('org.junit.jupiter:junit-jupiter-api')
+    testImplementation('org.apache.commons:commons-compress:1.18')
 
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine')
 }
